# kikers

./: .dockerignore  .env  .gitignore  .output.dot  Cargo.toml  Dockerfile  README  README.md  docker-compose.yml  elasticsearch.yml  install_styles.sh  log4rs.yaml  nginx.conf  nohup.out  output.dot  prepare_sql_init.sh  prepare_uat.sh
ffb-cli/: Cargo.toml
ffb-cli/src/: error.rs  main.rs
ffb-server/: Cargo.toml  Dockerfile  docker-compose.yml  gen_entities.sh  install_styles.sh
ffb-server/sql_init/: 2_schema.sql  3_data.sql
ffb-server/src/: api_structs.rs  auth.rs  database.rs  error.rs  main.rs
ffb-server/src/controllers/: auth.rs  user.rs
ffb-server/src/entities/: competition.rs  federation.rs  mod.rs  navaccess.rs  prelude.rs  role.rs  seaql_migrations.rs  stadium.rs  user.rs  user_fav_club.rs  user_league.rs
ffb-server/src/middleware/: role_checker.rs
ffb-server/src/pages/: admin.rs  game.rs  mod.rs  unauth.rs  user.rs
ffb-server/templates/: admin.html  base.html  cookies.html  footer.html  nav.html
ffb-server/templates/games/: game_row.html  games.html  games_of_day.html
ffb-server/templates/users/: leagues.html  user.html
ffb_auth/: Cargo.toml
ffb_auth/src/: error.rs  lib.rs
ffb_cli/: Cargo.toml
ffb_cli/src/: error.rs  main.rs
ffb_server/: Cargo.toml  README  foo  input.css  install_styles.sh  log4rs.yaml  run_as_dev.sh  tailwind.config.js
ffb_server/src/: api_structs.rs  application_data.rs  auth.rs  error.rs  main.rs  uri_builder.rs
ffb_server/src/controllers/: admin.rs  auth.rs  club.rs  cookies.rs  game.rs  mod.rs  user.rs
ffb_server/src/entities/: edition.rs  mod.rs  prelude.rs  role_navaccess.rs  sea_orm_active_enums.rs  user.rs  user_league.rs
ffb_server/src/middleware/: cookie_approval.rs  ddos_limiter.rs  error_redirector.rs  jwt_refresher.rs  mod.rs  protect_assets.rs  role_checker.rs
ffb_server/src/pages/: admin.rs  bets.rs  game.rs  leaderboard.rs  mod.rs  unauth.rs  user.rs
ffb_server/templates/: admin.html  base.html  cookies.html  error.html  footer.html  home.html  index.html  leaderboard.html  leadertable.html  login.html  mybets.html  nav.html  signup.html
ffb_server/templates/admin/: admin.html  bookmakers.html  seasons.html  users.html
ffb_server/templates/games/: game_picker_pills.html  game_row.html  games_dashboard.html  games_of_day.html
ffb_server/templates/users/: clubs.html  leagues.html  profile.html  user.html
ffb_structs/: Cargo.toml  gen_entities.sh
ffb_structs/sql_init/: 2_schema.sql  3_data.sql
ffb_structs/src/: api_structs.rs  api_token.rs  bet.rs  bookmaker.rs  cache_manager.rs  club.rs  common_api_structs.rs  country.rs  database.rs  ddos.rs  error.rs  game.rs  game_result.rs  games.rs  info.rs  label.rs  league.rs  lib.rs  locale.rs  navaccess.rs  odd.rs  role.rs  scoreboard.rs  scoreboard_entry.rs  season.rs  token.rs  transaction_result.rs  translation.rs  translation_manager.rs  user.rs
ffb_structs/src/api_entities/: fixture.rs  games.rs  goals.rs  league.rs  mod.rs  status.rs  team.rs  teams.rs  venue.rs
ffb_structs/src/entities/: mod.rs  navaccess.rs  prelude.rs  role.rs  role_navaccess.rs  stadium.rs  user.rs  user_league.rs
ffb_structs/src/sql_entities/: club.rs  competition.rs  stadium.rs
migration/: Cargo.toml
sql_init/: 2_schema.sql  3_data.sql  data.sql  schema.sql  user.sql
src/: auth.rs  constants.rs  controllers.rs  database.rs  error.rs  main.rs  middleware.rs  pages.rs
src/controllers/: auth.rs  cookies.rs  mod.rs  user.rs
src/entities/: blacklist.rs  club.rs  error.rs  federation_club.rs  game.rs  mod.rs  navaccess.rs  prelude.rs  requester.rs  role.rs  user.rs
src/entities/src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
src/middleware/: mod.rs  role_checker.rs
src/pages/: admin.rs  game.rs  mod.rs  unauth.rs
templates/: admin.html  base.html  cookies.html  footer.html  index.html  login.html  nav.html  signup.html
templates/admin/: users.html
templates/games/: games.html
