[package]
name = "ffb_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffb_structs = { path = "../ffb_structs" }
magic-crypt = "3.1.9"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = "1.0.136"
jwt = "0.16.0"
log = "0.4.14"
log4rs = {version = "1.0.0",  features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
actix-web = "3.3.3"
actix-files = "0.5.0"
actix-service = "1.0.6"
actix-web-validator = "2.2.0"
