[package]
name = "ffb_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffb_structs = { path = "../ffb_structs" }
magic-crypt = "3.1.9"
hmac = "0.12.1"
sha2 = "0.10.2"
serde = "1.0.136"
jwt = "0.16.0"
log = "0.4.14"
actix-web = "4.1.0"
time = "0.3.9"
derive_more = "0.99.17"
