[package]
name = "ffb_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.21.5" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.79", features = ["derive"] }
serde_json = { version = "1.0.79" }
clap = { version = "3.1.6" , features = ["derive"] }
lazy_static = "1.4.0"
chrono = "0.4.0"
