[package]
name = "ffb_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = { version = "1.0.79" }
clap = { version = "3.1.6" , features = ["derive"] }
chrono = "0.4.0"
ffb_structs = { path = "../ffb_structs" }
log = "~0.4"
url = "2.2.2"
async-std = { version = "1.11.0", features = ["tokio1"]}
