[package]
name = "ffb_server"
version = "0.1.0"
edition = "2021"


[features]
release = []
uat = ["ffb_structs/uat"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4.0"
askama = "0.11.1"
dotenv = "0.15.0"
serde = "~1.0"
actix-files = "0.6.0"
log = "~0.4"
futures = "~0.3"
actix-service = "~2.0"
log4rs = {version = "1.0.0",  features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
time = "0.3.9"
chrono = "0.4.19"
validator = { version = "0.14.0", features = ["derive"] }
actix-web-validator = "~3"
regex = "1.5.5"
ffb_structs = { path = "../ffb_structs", default-features = false }
ffb_auth = { path = "../ffb_auth" }
lazy_static = "1.4.0"
tokio = "1.17.0"
derive_more = "0.99.17"
