[package]
name = "ffb_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.0", features = ["serde"] }
sea-orm = { version ="0.7" , features = ["runtime-async-std-native-tls" ,"sqlx-mysql"]}
