[package]
name = "ffb_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.0", features = ["serde"] }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "mysql" ] }
redis = "0.21.5"
lazy_static = "1.4.0"
dotenv = "0.15.0"
