[package]
name = "ffb_structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls" , "mysql"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
redis = "0.21.5"
chrono = { version = "0.4.0", features = ["serde"] }
serde_json = "1.0.49"
log = "0.4.14"
uuid = { version = "0.8.2" , features = ["v4"]}
derive_more = "0.99.17"
mongodb = "2.2.1"
bson = "2.2.0"
futures = "^0.3"
regex = "1.5.5"
elasticsearch = "7.14.0-alpha.1"
